--- a/portfolio.html
+++ b/portfolio.html
@@ -168,10 +168,9 @@
         loop:true,
         nav:true,
         autoplay:true,
-        autoplaySpedd:1000
+        autoplaySpeed:1000
       });
       </script>
-      <!--  -->
   </div><!-- wrap -->
 </body>
 </html>
